# alltius-assignment

./: .gitignore  Readme.md  app.py  data_loaders.py  doc_loader.py  main.py  pyproject.toml  rag_agent.py  tools.py  vector_store.py  web_loader.py
